--- a/LTH_project/index.qmd
+++ b/LTH_project/index.qmd
@@ -14,7 +14,7 @@ editor:
 전통시장 홍보 목적 가설 : 만약 인구가 많아도 점포수가 적으면 홍보 필요성이 생긴다.
 여행 루트에 전통시장을 추가?
 
-2024년에 보도된 [세계타임즈](https://m.thesegye.com/news/view/1065580969734925)에서 KB국민카드의 전통시장 카드 소비 데이터 분석을 볼 수 있습니다.
+2024년 4월에 보도된 [세계타임즈](https://m.thesegye.com/news/view/1065580969734925)에서 KB국민카드의 전통시장 카드 소비 데이터 분석을 볼 수 있습니다.
 전통시장의 연령별 매출 비중에서 40%는 60대 이상에서 발생되었습니다.
 50대 26%, 40대 17%, 30대 10%, 20대 7%로 연령대가 높을수록 매출 비중이 높게 나타났습니다.
 
@@ -23,8 +23,9 @@ editor:
 알고 싶었다.
 
 2015년 기준으로 60대 이상 비율이 높은 행정구역에 점포수가 많이 분포되어 있는지 분석하기.
-이를 바탕으로 60대 비율이 적고, 인구가 많은 수도권, 광역시에 점포수가 많은지?
+이를 바탕으로 60대 비율이 적고, 인구가 많은 곳에 점포수가 많은지?
 60대 이상 비율이 높고, 인구가 적은 구역에 점포수가 많은지 비교하기.
+어느특징에 따라 전통시장이 많이 위치한지 분석해보았습니다.
 
 #### 나이 나누기
 
@@ -35,8 +36,8 @@ editor:
 `60~100세 이상 = age_over_60`
 
 한국은 공공기관 및 일부 기업이 60세로 정년으로 두고 있기 때문에 위와 같이 노년의 기준을 60세 이상으로 정했습니다.
-미국과 유럽은 60\~65세 사이를 정년으로 두고 있습니다.
-그리고
+
+(미국과 유럽은 60\~65세 사이를 정년으로 두고 있습니다.)
 
 # 점포수 크기에 따른 연령층 확인하기
 
@@ -52,6 +53,7 @@ pop = pd.read_excel('data/pop_2015.xlsx')
 ```
 
 #### 원본 숫자 안에 , 를 없애기 (문자열을 숫자열로 바꾸기)
+원본 데이터의 values를 보면 천 단위로 , 가 있다. 때문에 문자열로 인식되어서 이를 지우고 숫자열로 바꾼다.
 
 ```{python}
 subset = pop.iloc[1:18,1:14]
@@ -176,7 +178,7 @@ pop_ratio = pd.DataFrame({
 
 pop_ratio.index = ['age_under_20','age_2050','age_over_60']
 pop_ratio = pop_ratio.transpose()
-pop_ratio
+
 
 ```
 
@@ -185,6 +187,7 @@ pop_ratio
 pop_ratio['region'] = ['서울특별시', '부산광역시', '대구광역시', '인천광역시', '광주광역시', '대전광역시', '울산광역시', '세종특별시', '경기도', '강원도', '충청북도', '충청남도', '전라북도', '전라남도', '경상북도', '경상남도', '제주도']
 
 pop_ratio
+pop_ratio.sort_values('age_over_60', ascending = False)
 ```
 
 # 전통시장 데이터 불러오기
